--- a/Frontend/src/app/pages/dashboard/employee-datagrid/employee-datagrid.component.html
+++ b/Frontend/src/app/pages/dashboard/employee-datagrid/employee-datagrid.component.html
@@ -15,14 +15,18 @@
     </clr-dg-cell>
     <clr-dg-cell>
       <clr-icon shape="check" class="is-success" *ngIf="e.erreichbar"></clr-icon>
-      <clr-icon shape="times" class="is-error" *ngIf="!e.erreichbar"></clr-icon>
+      <span *ngIf="!e.erreichbar">
+        <clr-icon shape="times" class="is-error"></clr-icon>
+        {{e.grundDAbw}}
+      </span>
     </clr-dg-cell>
     <clr-dg-cell>{{e.status}}</clr-dg-cell>
     <clr-dg-cell>{{e.rechteklasse | accessRights}}</clr-dg-cell>
     <clr-dg-cell>{{e.personalnummer}}</clr-dg-cell>
   </clr-dg-row>
+  
   <clr-dg-footer>
     {{employees?.length}} Benutzer insgesamt
   </clr-dg-footer>
-  
+
 </clr-datagrid>
