--- a/Frontend/src/app/pages/forms/login/login.component.html
+++ b/Frontend/src/app/pages/forms/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="login-wrapper">
   <form class="login" (ngSubmit)="submit()">
     <section class="title">
-      <h3 class="welcome">Willkommen beim</h3>
-      NSJ Dashboard
+      <h3 class="welcome">Willkommen bei</h3>
+      NSJ
       <h5 class="hint">Benutzen Sie Ihre E-Mail Adresse, um sich einzuloggen.</h5>
     </section>
     <div class="login-group">
