--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -5,7 +5,9 @@
   <hr />
   <h2>Account Daten ändern</h2>
   <div class="wrapper" id="change-account-settings">
+    <h3>E-Mail ändern:</h3>
     <change-account-settings class="left" [input]="changeEmail" [onSubmit]="'email'"></change-account-settings>
+    <h3 class="right">Passwort ändern:</h3>
     <change-account-settings class="right" [input]="changePassword" [onSubmit]="'password'"></change-account-settings>
   </div>
   <hr />
