--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
 
   </ng-container>
 
-  <ng-container *ngIf="user && groups">
+  <ng-container *ngIf="user && groups?.length">
     <clr-vertical-nav-group routerLinkActive="active">
 
       <clr-icon shape="employee-group" clrVerticalNavIcon></clr-icon>
