--- a/Frontend/src/app/pages/view-all-employees/view-all-employees.component.html
+++ b/Frontend/src/app/pages/view-all-employees/view-all-employees.component.html
@@ -30,7 +30,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-outline" (click)="close(i)">Abbrechen</button>
+            <button type="button" class="btn btn-outline" (click)="closeModal(i)">Abbrechen</button>
             <button type="button" class="btn btn-success-outline" (click)="closeAndSend(i)" [disabled]="!models[i]">Ändern</button>
           </div>
         </clr-modal>
