--- a/Frontend/src/app/pages/credits/credits.component.html
+++ b/Frontend/src/app/pages/credits/credits.component.html
@@ -4,6 +4,7 @@
     </h1>
     <hr />
     <p>
-        Diese Website wird Ihnen präsentiert von NSJ
+        Diese Website wird Ihnen präsentiert von NSJ<br />
+        <img src="../../../assets/logo.png" id="logo-image" />
     </p>
 </div>
