--- a/Frontend/src/app/pages/dashboard/groups/add-group-wizard/add-group-wizard.component.html
+++ b/Frontend/src/app/pages/dashboard/groups/add-group-wizard/add-group-wizard.component.html
@@ -51,7 +51,7 @@
     <ul *ngFor="let m of model.mitglieder;let i = index">
       <li>
         {{m}}
-        <clr-icon shape="times" (click)="removeEmployeeFromList(i)" style="float: right"></clr-icon>
+        <clr-icon shape="times" (click)="removeEmployeeFromList(i)" class="icon-right"></clr-icon>
       </li>
     </ul>
   </clr-wizard-page>
