--- a/Frontend/src/app/pages/dashboard/mobile/add-group-mobile/add-group-mobile.component.html
+++ b/Frontend/src/app/pages/dashboard/mobile/add-group-mobile/add-group-mobile.component.html
@@ -22,7 +22,7 @@
       </clr-input-container>
     </form>
 
-    <clr-input-container style="display: inline-block;">
+    <clr-input-container id="inline-input">
       <label>Wer soll Mitglied der Arbeitsgruppe sein?</label>
       <input clrInput minlength="12" maxlength="12" placeholder="Mitglieder?" [(ngModel)]="current" />
 
@@ -35,7 +35,7 @@
     <ul *ngFor="let m of createNewGroup.value.mitglieder;let i = index">
       <li>
         {{m}}
-        <clr-icon shape="times" (click)="removeEmployeeFromList(i)" style="float: right"></clr-icon>
+        <clr-icon shape="times" (click)="removeEmployeeFromList(i)" class="icon-right"></clr-icon>
       </li>
     </ul>
   </div>
