--- a/Frontend/src/app/pages/settings/settings.component.scss
+++ b/Frontend/src/app/pages/settings/settings.component.scss
@@ -1,32 +1,34 @@
 .wrapper {
-    overflow: hidden; 
+  overflow: hidden;
 
-    .left {
-        float:left;
-        width: 40%;
-    }
+  .left {
+    float: left;
+    width: 40%;
+  }
 
-    .right {
-        float: left;
-        width: 50%;
-    }
+  .right {
+    float: left;
+    width: 50%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .wrapper {
-        .left, .right {
-            display: block;
-            width: 100%;
+  .wrapper {
 
-            .centered {
-                width: 50%;
-                margin: 0 auto;
-                display: block;
-            }
-        }
-    }
+    .left,
+    .right {
+      display: block;
+      width: 100%;
 
-    #settings {
-        text-align: center;
+      .centered {
+        width: 50%;
+        margin: 0 auto;
+        display: block;
+      }
     }
+  }
+
+  #settings {
+    text-align: center;
+  }
 }
