--- a/Frontend/src/app/pages/employee-stats/employee-stats.component.scss
+++ b/Frontend/src/app/pages/employee-stats/employee-stats.component.scss
@@ -17,6 +17,10 @@
       td {
         text-align: left;
         width: 50%;
+
+        .signpost-right {
+          display: inline-block;
+        }
       }
     }
   }
