More small tweaks and fixes

--- a/Frontend/src/app/pages/credits/credits.component.html
+++ b/Frontend/src/app/pages/credits/credits.component.html
@@ -1,10 +1,19 @@
 <div id="credits">
-    <h1>
-        Credits
-    </h1>
-    <hr />
-    <p>
-        Diese Website wird Ihnen präsentiert von NSJ<br />
-        <img src="../../../assets/logo.png" id="logo-image" />
-    </p>
+  <h1>
+    Credits
+  </h1>
+  <hr />
+  <p>
+    Diese Website wird Ihnen präsentiert von NSJ<br />
+  </p>
+
+  <img src="../../../assets/logo.png" id="logo-image" />
+  <p>
+    NSJ sind:
+    <ul>
+      <li><b>N</b>ils Sommerfeld</li>
+      <li><b>S</b>ophie Féaux de Lacroix</li>
+      <li><b>J</b>onathan Frohne</li>
+    </ul>
+    <!-- acts like </p> because block-level Element-->
 </div>
