--- a/Frontend/src/app/ui/layout/header/header.component.html
+++ b/Frontend/src/app/ui/layout/header/header.component.html
@@ -1,5 +1,6 @@
 <clr-header class="header header-1">
   <div class="branding unselectable" unselectable="on">
+    <clr-icon shape="custom-logo"></clr-icon>
     <span class="title">NSJ</span>
   </div>
   <div class="header-nav">
