Fixed vor und nachname

--- a/Frontend/src/app/pages/forms/register/register.component.html
+++ b/Frontend/src/app/pages/forms/register/register.component.html
@@ -8,11 +8,11 @@
     <div class="login-group">
       <clr-input-container>
         <label class="clr-sr-only">Vorname</label>
-        <input type="text" name="username" clrInput placeholder="Vorname" [(ngModel)]="form.lastName" />
+        <input type="text" name="username" clrInput placeholder="Vorname" [(ngModel)]="form.name" />
       </clr-input-container>
       <clr-input-container>
         <label class="clr-sr-only">Nachname</label>
-        <input type="text" name="username" clrInput placeholder="Nachname" [(ngModel)]="form.name" />
+        <input type="text" name="username" clrInput placeholder="Nachname" [(ngModel)]="form.lastName" />
       </clr-input-container>
       <clr-input-container>
         <label class="clr-sr-only">E-Mail</label>
